--- a/templates/base.html
+++ b/templates/base.html
@@ -35,9 +35,9 @@
                   dark:hover:bg-gray-700 group">
                   <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
                     dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
-                    <i class="text-2xl fas fa-home"></i>
+                    <i class="text-xl fas fa-home"></i>
                   </span>
-                    <span class="ms-5 text-gray-300 text-xl ">Home</span>
+                    <span class="ms-5 text-gray-300 text-lg ">Home</span>
                 </a>
               </li>
             </ul>
@@ -51,9 +51,9 @@
                   dark:hover:bg-gray-700 group">
                   <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
                     dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
-                    <i class="text-2xl fa-solid fa-gear"></i>
+                    <i class="text-xl fa-solid fa-gear"></i>
                   </span>
-                    <span class="ms-5 text-gray-300 text-xl ">Settings</span>
+                    <span class="ms-5 text-gray-300 text-lg ">Settings</span>
                 </a>
               </li>
 
@@ -64,9 +64,9 @@
                     dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                       <span class="inline-block w-5 h-5 text-gray-500 transition duration-75 
                         dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
-                          <i class="text-2xl fa-solid fa-right-from-bracket"></i>
+                          <i class="text-xl fa-solid fa-right-from-bracket"></i>
                       </span>
-                    <span class="ms-5 text-gray-300 text-xl">Logout</span>
+                    <span class="ms-5 text-gray-300 text-lg">Logout</span>
                   </button>
                 </form>
               </li>
