--- a/templates/settings/employee/tables/deduction_table.html
+++ b/templates/settings/employee/tables/deduction_table.html
@@ -1,22 +1,20 @@
-<h5 class="card-title">Deductions</h5>
-<table class="table table-dark table-striped" id="sortable-table">
-  <thead>
+<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+  <thead class="text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
     <tr>
-      <th class="sortable">Name</th>
-      <th class="sortable">Amount</th>
-      <th class="sortable">Discription</th>
-      <th class="sortable">Date</th>
+      <th scope="col" class="px-6 py-3">Name</th>
+      <th scope="col" class="px-6 py-3">Amount</th>
+      <th scope="col" class="px-6 py-3">Discription</th>
+      <th scope="col" class="px-6 py-3">Date</th>
     </tr>
   </thead>
   <tbody>
     {% for deduction in deduction_list %}
-    <tr>
-      <td>{{ deduction.name }}</td>
-      <td>{{ deduction.amount }}</td>
-      <td>{{ deduction.discription }}</td>
-      <td>{{ deduction.date|date:"Y-m-d" }}</td>
+    <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
+      <td class="px-6 py-4 text-base">{{ deduction.name }}</td>
+      <td class="px-6 py-4 text-base">{{ deduction.amount }}</td>
+      <td class="px-6 py-4 text-base">{{ deduction.discription }}</td>
+      <td class="px-6 py-4 text-base">{{ deduction.date|date:"Y-m-d" }}</td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
-
