--- a/templates/base.html
+++ b/templates/base.html
@@ -114,23 +114,40 @@
     <div id="settings_content" class="max-h-full">
       {% for message in messages %}
       <div class="fixed top-16 right-0 w-1/4">
-        <div id="alert-2" class="flex items-center p-4 mb-4 text-red-800 rounded-lg rounded-t-none 
+        {% if message.tags == "error" %}
+        <div class="alert flex items-center p-4 mb-4 text-red-800 rounded-lg rounded-t-none
           bg-red-50 dark:bg-gray-800 dark:text-red-400 border-t-4 border-red-500" role="alert">
-          <div class="ms-3 text-sm font-medium">
+          <div class="ml-3 text-sm font-medium">
             {{ message }}
           </div>
           <button 
             type="button" 
-            _="on click add .hidden to #alert-2"
+            _="on click add .hidden to .alert"
             class="ms-auto -mx-1.5 -my-1.5 bg-red-50 text-red-500 rounded-lg 
             focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex
-            items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-red-400 dark:hover:bg-gray-700" >
+            items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-red-400 dark:hover:bg-gray-700">
             <i class="fa-solid fa-xmark"></i>
           </button>
         </div>
+        {% elif message.tags == "success" %}
+        <div class="alert flex items-center p-4 mb-4 text-green-800 rounded-lg rounded-t-none
+          bg-green-50 dark:bg-gray-800 dark:text-green-400 border-t-4 border-green-500" role="alert">
+          <div class="ml-3 text-sm font-medium">
+            {{ message }}
+          </div>
+          <button 
+            type="button" 
+            _="on click add .hidden to .alert"
+            class="ms-auto -mx-1.5 -my-1.5 bg-green-50 text-green-500 rounded-lg 
+            focus:ring-2 focus:ring-green-400 p-1.5 hover:bg-green-200 inline-flex
+            items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-green-400 dark:hover:bg-gray-700">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
+        </div>
+        {% endif %}
       </div>
       {% endfor %}
-    {% block content %}
+      {% block content %}
     {% endblock content %}
     </div>
 
