--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -1,18 +1,19 @@
 {% load custom_filters %}
-<tr
-  class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 text-xs ">
+<tr class="dark:bg-gray-900 text-xs">
   <td
     _="on click toggle .hidden on #extend-{% now "G:i:s" %}"
-    class="px-2 py-4 text-base dark:hover:text-white cursor-pointer"
-  >{{ product_line.product }}</td>
+    class="px-2 py-4 text-base dark:hover:text-white cursor-pointer">
+    {{ product_line.product }}
+  </td>
   <td class="px-2 py-4 text-base">{{ product_line.values }}</td>
-  <!--<td class="px-2 py-4 text-base"></td>--> <td class="px-2 py-4 text-base">{{ product_line.normal_price }}</td>
+  <td class="px-2 py-4 text-base" id="price-{% now "G:i:s" %}">{{ product_line.normal_price }}</td>
   <td class="px-2 py-4 text-base">
     <div class="relative flex items-center">
       <button
         _="on click if (parseInt(#counter-input-{% now "G:i:s" %}.value) > 1)
         then set #counter-input-{% now "G:i:s" %}'s value to (parseInt(#counter-input-{% now "G:i:s" %}.value) - 1) 
-        then set #total-price-{% now "G:i:s" %}.innerText to (({{ product_line.normal_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"
+        then set #total-price-{% now "G:i:s" %}.innerText to
+        ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"
         type="button"
         class="flex-shrink-0 bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600
         hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md
@@ -24,10 +25,13 @@
       class="flex-shrink-0 text-gray-900 dark:text-white border-0 bg-transparent
       text-sm font-normal focus:outline-none focus:ring-0 w-[2rem] text-center"
       value="1"
-      _="on change set #total-price-{% now "G:i:s" %}.innerText to (({{ product_line.normal_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"/>
+      _="on change set #total-price-{% now "G:i:s" %}.innerText to
+      ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"/>
       <button
-        _="on click set #counter-input-{% now "G:i:s" %}'s value to (parseInt(#counter-input-{% now "G:i:s" %}.value) + 1)
-        then set #total-price-{% now "G:i:s" %}.innerText to (({{ product_line.normal_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"
+        _="on click set #counter-input-{% now "G:i:s" %}'s value to
+        (parseInt(#counter-input-{% now "G:i:s" %}.value) + 1)
+        then set #total-price-{% now "G:i:s" %}.innerText to
+        ((parseInt(#price-{% now "G:i:s" %}.innerText) * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2))"
         type="button" id="decrement-button" 
         class="flex-shrink-0 bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600
         hover:bg-gray-200 inline-flex items-center justify-center border border-gray-300 rounded-md
@@ -38,7 +42,15 @@
   </td> <!--amount-->
   <td class="px-2 py-4 text-base" id="total-price-{% now "G:i:s" %}">{{ product_line.normal_price }}</td>
   <td class="px-2 py-4 text-base">
-    <select 
+    <select id="delivery-type-{% now "G:i:s" %}"
+      _="on change if my.value == 'F' then 
+         set #price-{% now "G:i:s" %}.innerText to {{ product_line.fawry_price }} 
+         then set #total-price-{% now "G:i:s" %}.innerText to 
+         ({{ product_line.fawry_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2) 
+         else 
+         set #price-{% now "G:i:s" %}.innerText to {{ product_line.normal_price }} 
+         then set #total-price-{% now "G:i:s" %}.innerText to 
+         ({{ product_line.normal_price }} * parseInt(#counter-input-{% now "G:i:s" %}.value)).toFixed(2)"
       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-full focus:ring-blue-500
       focus:border-blue-500 block p-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
       dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
@@ -58,6 +70,7 @@
   <td class="px-3 py-4 text-base">
     <div class="flex gap-5">
       <a 
+        hx-get="{% url 'edit_order_detail' %}"
         hx-target="#modal_form"
         hx-swap="innerHtml"
         _="on click remove .hidden from modal_div"
@@ -65,8 +78,8 @@
         <i class="fa-solid fa-pen-to-square"></i>
       </a>
       <a 
-        hx-confirm="Are you sure you want to delete this deduction?"
-        class="cursor-pointer hover:text-red-700 ">
+        _="on click if confirm('Are you sure you want to delete this row?') then remove closest <tr/>"
+        class="cursor-pointer hover:text-red-700">
         <i class="fa-solid fa-trash"></i>
       </a>
     </div>
@@ -101,3 +114,4 @@
     </table>
   </td>
 </tr>
+
