--- a/templates/settings/dashboard/inventory.html
+++ b/templates/settings/dashboard/inventory.html
@@ -2,21 +2,21 @@
   <!-- Breadcrumb -->
   <nav class="flex my-2 mt-12 p-4" aria-label="Breadcrumb">
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+      <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
         <i class=" fas fa-home"></i>
         <a href="{% url 'home' %}" class="inline-flex items-center text-sm font-medium">
           Home
         </a> 
         <i class="fa-solid fa-angle-right"></i>
       </li>
-      <li class="inline-flex items-center space-x-1 text-gray-700 dark:text-gray-400 ">
-        <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">
+      <li class="inline-flex items-center space-x-1 text-gray-400 ">
+        <span class="ms-1 text-sm font-medium md:ms-2 text-gray-400">
           Dashboard
         </span>
         <i class="fa-solid fa-angle-right"></i>
       </li>
-      <li class="inline-flex items-center space-x-1 text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-        <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">
+      <li class="inline-flex items-center space-x-1 text-gray-400 hover:text-white">
+        <span class="ms-1 text-sm font-medium md:ms-2 text-gray-400">
           Inventory
         </span>
       </li>
@@ -26,13 +26,13 @@
     <div class="grid grid-cols-2 gap-10 h-full">
       <div class=" bg-gray-800 rounded-lg max-w-full">
         <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
-          <span class="inline-block text-gray-500 transition duration-75 
-            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+          <span class="inline-block transition duration-75 
+            text-gray-200 group-hover:text-white">
             <i class="fa-regular fa-money-bill-wave"></i>
           </span>
           <p class="text-white text-lg m-2 mx-4"> Need To Buy </p>
-          <span class="inline-block text-gray-500 transition duration-75 
-            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+          <span class="inline-block transition duration-75 
+            text-gray-200 group-hover:text-white">
             <i class="fa-regular fa-money-bill-wave"></i>
           </span>
         </div>
@@ -42,13 +42,13 @@
       </div>
       <div class=" bg-gray-800 rounded-lg max-w-full">
         <div class="flex justify-center items-center mb-2 rounded-t-lg bg-gray-700">
-          <span class="inline-block text-gray-500 transition duration-75 
-            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+          <span class="inline-block transition duration-75 
+            text-gray-200 group-hover:text-white">
             <i class="fa-solid fa-square-list"></i>
           </span>
           <p class="text-white text-lg m-2 mx-5"> Products List </p>
-          <span class="inline-block text-gray-500 transition duration-75 
-            dark:text-gray-200 group-hover:text-gray-900 dark:group-hover:text-white">
+          <span class="inline-block transition duration-75 
+            text-gray-200 group-hover:text-white">
             <i class="fa-solid fa-square-list"></i>
           </span>
         </div>
