--- a/templates/settings/dashboard/tables/to_buy_table.html
+++ b/templates/settings/dashboard/tables/to_buy_table.html
@@ -1,5 +1,5 @@
-<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-  <thead class="sticky top-0 text-sm text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+<table class="w-full text-sm text-left rtl:text-right text-gray-400">
+  <thead class="sticky top-0 text-sm uppercase bg-gray-700 text-gray-400">
     <tr>
       <th scope="col" class="px-3 py-3">Procut</th>
       <th scope="col" class="px-3 py-3">Stock</th>
@@ -9,15 +9,15 @@
   </thead>
   <tbody>
     {% for product_line in to_buy_list %}
-    <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800">
+    <tr class=" odd:bg-gray-900 even:bg-gray-800">
       <td class="px-3 py-4 text-base">{{ product_line.product.name }} ({{ product_line.values }})</td>
       <td class="px-3 py-4 text-base">{{ product_line.stock_qty }}</td>
       <td class="px-3 py-4 text-base">{{ product_line.min_stock_qty }}</td>
       <td class="px-3 py-4 text-base">
         {% if product_line.is_active %}
-        <span class="bg-red-100 text-green-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-green-600 dark:text-gray-100">Active</span>
+        <span class=" text-xs font-medium me-2 px-2.5 py-0.5 rounded-full bg-green-600 text-gray-100">Active</span>
         {% else %}
-        <span class="bg-red-100 text-red-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded-full dark:bg-red-700 dark:text-gray-100">Inactive</span>
+        <span class=" text-xs font-medium me-2 px-2.5 py-0.5 rounded-full bg-red-700 text-gray-100">Inactive</span>
         {% endif %}
       </td>
     </tr>
